Add manufacturer Dropdown example, OpenAPI updates
